--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "campaignvault",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
-    "@rails/webpacker": "^4.2.0",
+    "@rails/webpacker": "^4.0.7",
+    "chart.js": "^2.9.1",
+    "chartkick": "^3.1.3",
+    "jquery": "^3.4.1",
+    "sortablejs": "^1.10.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
