--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "countup.js": "^2.0.4",
     "jquery": "^3.4.1",
     "sortablejs": "^1.10.1",
+    "tailwindcss": "^1.1.3",
     "turbolinks": "^5.2.0",
     "turbolinks-animate": "^3.2.1"
   },
